<resources>
    <string name="app_name">Book Store</string>
    <string name="header1">The books table contains</string>
    <string name="header2"> books</string>
    <!-- Title text for the empty view, which describes the empty store image [CHAR LIMIT=50] -->
    <string name="empty_view_title_text">It\'s a bit lonely here…</string>

    <!-- Subtitle text for the empty view that prompts the user to add a book [CHAR LIMIT=50] -->
    <string name="empty_view_subtitle_text">Get started by adding a book</string>

    <!-- Label for overflow menu option that inserts fake book data into the app [CHAR LIMIT=20] -->
    <string name="action_insert_dummy_data">Insert Dummy Data</string>

    <!-- Label for overflow menu option that deletes all book data in the app [CHAR LIMIT=20] -->
    <string name="action_delete_all_entries">Delete All Books</string>
    <string name="action_save">Save</string>
    <string name="action_delete">Delete</string>
    <string name="editor_activity_title_edit_book">Edit Book</string>
    <string name="hint_book_name">Name</string>
    <string name="hint_book_price">Price</string>
    <string name="category_Quantity">Quantity</string>
    <string name="hint_book_quantity">Quantity</string>
    <string name="category_overview">Overview</string>
    <string name="editor_delete_book_failed">Delete book failed</string>
    <string name="editor_delete_book_successful">Delete book successful</string>
    <string name="add_book">Add Book</string>
    <string name="delete">Delete</string>
    <string name="cancel">Cancel</string>
    <string name="discard">Discard</string>
    <string name="keep_editing">Keep editing</string>
    <string name="editor_insert_book_failed">Editor insert book failed</string>
    <string name="editor_insert_book_successful">Editor insert book successful</string>
    <string name="editor_update_book_failed">Editor update book failed</string>
    <string name="editor_update_book_successful">Editor update book successful</string>
    <string name="delete_dialog_msg">Delete this book?</string>
    <string name="unsaved_changes_dialog_msg">Discard your changes and quit editing?</string>
    <string name="category_name">Name</string>
    <string name="category_price">Price</string>
    <string name="category_quantity">Quantity</string>
    <string name="category_supplier_name">Supplier Name</string>
    <string name="category_supplier_phone">Supplier Phone</string>
    <string name="required_name">Name is required!</string>
    <string name="price_required">Price is reuired!</string>
    <string name="quantity">Quantity is set to zero!</string>
    <string name="supplier_name">Supplie name is required!</string>
    <string name="supplier_phone">Supplier phone number is required!</string>
    <string name="hint_supplier_name">Supplier name</string>
    <string name="hint_supplier_phone_number">Supplier phone number</string>
    <string name="price">Price:</string>
    <string name="quantity2">Quantity:</string>
    <string name="title">Title</string>
    <string name="up"><![CDATA[>]]></string>
    <string name="down"><![CDATA[<]]></string>
    <string name="quantity_change">Book has been saved with new quantity</string>
    <string name="Change_quantity">Quantity change</string>
    <string name="not_supported">Insertion is not supported for</string>
    <string name="requires_name">Book requires a name</string>
    <string name="quantity_was_changed">Quantity was changed</string>
    <string name="product">Product</string>
    <string name="peter_co"><![CDATA[Peter & Co]]></string>
    <string name="tel_number">+359 52 111111</string>
    <string name="main_activity">MainActivity</string>
    <string name="rows_were_deleted">rows deleted from book database</string>
    <string name="product_finished">Productis finished, buy another product</string>
    <string name="prise_required">Price is required</string>
    <string name="Failed_to">Failed to insert row for</string>
    <string name="Update_is_not_supported">Update is not supported for</string>
    <string name="ravno">=?</string>
    <string name="edno">1</string>

</resources>

