<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    android:orientation="horizontal"
    android:padding="@dimen/activity_margin">

    <LinearLayout
        android:layout_width="@dimen/zero"
        android:layout_height="wrap_content"
        android:layout_weight="3"
        android:orientation="vertical"
        android:layout_gravity="center"
       >

        <RelativeLayout
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            >
        <TextView
            android:id="@+id/title"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/title"
            />

        <TextView
            android:id="@+id/name"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:fontFamily="sans-serif-medium"
            android:layout_toRightOf="@id/title"
            android:paddingLeft="@dimen/padding_left"
            android:textAppearance="?android:textAppearanceSmall"
            android:textColor="@color/black" />
        </RelativeLayout>

        <RelativeLayout
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            >

        <TextView
            android:id="@+id/pr"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/price"/>

        <TextView
            android:id="@+id/price"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:fontFamily="sans-serif"
            android:layout_toRightOf="@id/pr"
            android:textColor="@color/grey"
            android:paddingLeft="@dimen/padding_left"/>
        </RelativeLayout>

        <RelativeLayout
            android:layout_width="wrap_content"
            android:layout_height="wrap_content">

            <TextView
                android:id="@+id/quant"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/quantity2"/>
            <TextView
                android:id="@+id/quantity"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:fontFamily="sans-serif"
                android:layout_toRightOf="@id/quant"
                android:textColor="@color/grey"
                android:paddingLeft="@dimen/padding_left"/>
        </RelativeLayout>

    </LinearLayout>

    <Button
            android:id="@+id/sale_btn"
            android:layout_width="50dp"
            android:layout_height="50dp"
            android:clickable="true"
            android:focusable="false"
            android:background="@drawable/sale"
            android:textAppearance="@style/Base.TextAppearance.AppCompat.Widget.Button.Colored"
            android:layout_marginBottom="10dp"
            />


</LinearLayout>